Periodic sonarqube clean round
* Boolean math
* Static finals
* "static" base class members should not be accessed via derived types
* Add missing @OverRide
* Use diamond operator
* Use simplified stream APIs